--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,74 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+
+@font-face {
+  font-family: 'Bosca';
+  src: url('./assets/font/Bosca-Medium.eot');
+  src: local('Bosca Medium'), local('Bosca-Medium'),
+      url('./assets/font/Bosca-Medium.eot?#iefix') format('embedded-opentype'),
+      url('./assets/font/Bosca-Medium.woff2') format('woff2'),
+      url('./assets/font/Bosca-Medium.woff') format('woff'),
+      url('./assets/font/Bosca-Medium.ttf') format('truetype');
+  font-weight: 500;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Bosca';
+  src: url('./assets/font/Bosca-Regular.eot');
+  src: local('Bosca'), local('Bosca-Regular'),
+      url('./assets/font/Bosca-Regular.eot?#iefix') format('embedded-opentype'),
+      url('./assets/font/Bosca-Regular.woff2') format('woff2'),
+      url('./assets/font/Bosca-Regular.woff') format('woff'),
+      url('./assets/font/Bosca-Regular.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Bosca';
+  src: url('./assets/font/Bosca-Bold.eot');
+  src: local('Bosca Bold'), local('Bosca-Bold'),
+      url('./assets/font/Bosca-Bold.eot?#iefix') format('embedded-opentype'),
+      url('./assets/font/Bosca-Bold.woff2') format('woff2'),
+      url('./assets/font/Bosca-Bold.woff') format('woff'),
+      url('./assets/font/Bosca-Bold.ttf') format('truetype');
+  font-weight: bold;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Bosca';
+  src: url('./assets/font/Bosca-Light.eot');
+  src: local('Bosca Light'), local('Bosca-Light'),
+      url('./assets/font/Bosca-Light.eot?#iefix') format('embedded-opentype'),
+      url('./assets/font/Bosca-Light.woff2') format('woff2'),
+      url('./assets/font/Bosca-Light.woff') format('woff'),
+      url('./assets/font/Bosca-Light.ttf') format('truetype');
+  font-weight: 300;
+  font-style: normal;
+}
+
+
 .App {
   text-align: center;
 }
+#root{
+  font-family: "Raleway";
+}
+.Bosca{
+  font-family: "Bosca";
+}
+.Poppins{
+  font-family: "Poppins";
+}
 
+body{
+  background-color: #FBF8F1;
+}
 .App-logo {
   height: 40vmin;
   pointer-events: none;
@@ -36,3 +103,17 @@
     transform: rotate(360deg);
   }
 }
+
+/* body {
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+code {
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+    monospace;
+} */
