--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,26 @@
 @tailwind utilities;
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
+.activeLink {
+  background-color: green;
+}
+.linkStyle{
+  display: flex;
+  gap: 0.5rem;
+  align-items: center;
+  font-size: 14px;
+  color: #676767;
+  background: #a0b4b300;
+  width: 10vw;
+  padding: 0.2rem;
 
+}
+.linkStyle:hover{
+  color: #282c34;
+  background: #54BAB9;
+  width: 8vw;
+  padding: 0.2rem ;
+}
 @font-face {
   font-family: 'Bosca';
   src: url('./assets/font/Bosca-Medium.eot');
@@ -66,9 +85,9 @@
   font-family: "Poppins";
 }
 
-body{
+/* body{
   background-color: #FBF8F1;
-}
+} */
 .App-logo {
   height: 40vmin;
   pointer-events: none;
