add student popup plus search in table

--- a/src/App.css
+++ b/src/App.css
@@ -3,8 +3,15 @@
 @tailwind utilities;
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
-.activeLink {
-  background-color: green;
+.active {
+  color: #282c34;
+  background: #54BAB9;
+  display: flex;
+  gap: 0.5rem;
+  align-items: center;
+  font-size: 14px;
+  width: 8vw;
+  padding: 0.2rem;
 }
 .linkStyle{
   display: flex;
